FIX - added media query to footer to align center on small screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,12 @@ body {
         left: 50%;
     }
 
+    @media screen and (min-width: 320px) {
+        footer {
+            text-align: center;
+        }
+    }
+
 
     /*---------------------------------------- ABOUT US ----------------------------------------*/
     
